feat: oauth & refactor
Move Handlers inside internal api
Implement Jira OAuth & Callback
Add .env.example
Add air command for hot reload
Add jira sample data
